--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Password Random</title>
     <link rel="stylesheet" href="main.css">
-    <link rel="icon" href="../PasswordRandom/pexels-aarti-vijay-2693529.jpg" >
+    <link rel="icon" href="pexels-aarti-vijay-2693529.jpg" >
 </head>
 <body>
     <div class="container">
